--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -39,8 +39,32 @@ app__navbar-links{
 
     li{
         margin: 0 1rem;
-        
-    }
+        cursor:pointer;
+        flex-direction:column;
+
+        div{
+            width:5px;
+            height:5px;
+            background:transparent;
+            border: radius 50%;
+            margin-bottom:5px;
+        }//div
+
+        a{
+            color:var(--gray-color);
+            text-decoration:none;
+            flex-direction: column;
+            text-transform:uppercase;
+            font-weight:500;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+                color: var(--secondary-color);
+            }
+        }//a
+    }//li
+
+    
 }
 
 //navbar ends here
