--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -30,7 +30,7 @@
     }//img
 }//app__navbar-logo
 
-app__navbar-links{
+.app__navbar-links{
     flex:1;
     display:flex;
     justify-content: center;
@@ -40,38 +40,34 @@ app__navbar-links{
     li{
         margin: 0 1rem;
         cursor:pointer;
-        flex-direction:column;
-
-        div{
-            width:5px;
-            height:5px;
-            background:transparent;
-            border: radius 50%;
-            margin-bottom:5px;
-        }//div
+        // flex-direction:column;
 
         a{
             color:var(--gray-color);
             text-decoration:none;
-            flex-direction: column;
+            // flex-direction: column;
             text-transform:uppercase;
             font-weight:500;
-            transition: all 0.3s ease-in-out;
+            // transition: all 0.3s ease-in-out;
 
             //hover for a
             &:hover {
                 color: var(--secondary-color);
             }
         }//a
+
+        &:hover{
+            div{
+                background-color: var(--secondary-color);
+            }
+        }
     }//li
 
-    //hover for li
-    &:hover{
-        div{
-            background-color: var(--secondary-color);
-        }
+    //responsive screen
+    @media screen and (min-width:900px){
+        display:none;
     }
-}
+}//app__navbar-links
 
 //navbar ends here
 
