--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -65,7 +65,7 @@
 
     //responsive screen
     @media screen and (min-width:900px){
-        display:none;
+        // display:none;
     }
 }//app__navbar-links
 
