--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -140,13 +140,20 @@
                     &:hover {
                         color: var(--secondary-color);
                     }
-                }
-            }
+                }//a
+            }//li
+        }//ul
 
-
+        @media screen and (min-width: 900px) {
+            display: none;
         }
-    }
-}
+    }//div
+
+    @media screen and (min-width: 900px) {
+        display: none;
+    }    
+}//app__navbar-menu
+
 
 //navbar ends here
 
