--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -1,91 +1,96 @@
-//navbar starts here
-.app__navbar{
-    width:100%;
-    display:flex;
+.app__navbar {
+    width: 100%;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background:rgba(255, 255, 255, 0.25);
-    backdrop-filter:blur(4px);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
-    border:1px solid rgba(255, 255, 255, 0.18);
-    position:fixed;
-    z-index:2;
-}
-
-//navbar-logo
-.app__navbar-logo{
-    display:flex;
-    justify-content:flex-start;
-    align-items:center;
-
-    img{
-
-        //responsive screen
-        @media screen and (min-width:2000px)
-        {
-            width:180px;
-            height:40px;
-        }
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    position: fixed;
+    z-index: 2;
+}//app__navbar
+  
+.app__navbar-logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  
+    img {
+      width: 90px;
+      height: 20px;
+  
+      @media screen and (min-width: 2000px) {
+        width: 180px;
+        height: 40px;
+      }
     }//img
 }//app__navbar-logo
-
-.app__navbar-links{
-    flex:1;
-    display:flex;
+  
+.app__navbar-links {
+    flex: 1;
+    display: flex;
     justify-content: center;
-    align-items:center;
-    list-style:none;
-
-    li{
-        margin: 0 1rem;
-        cursor:pointer;
-        flex-direction:column;
-
-        a{
-            color:var(--gray-color);
-            text-decoration:none;
-            flex-direction: column;
-            text-transform:uppercase;
-            font-weight:500;
-            transition: all 0.3s ease-in-out;
-
-            //hover for a
-            &:hover {
-                color: var(--secondary-color);
-            }
-        }//a
-
-        &:hover{
-            div{
-                background-color: var(--secondary-color);
-            }
+    align-items: center;
+    list-style: none;
+  
+    li {
+      margin: 0 1rem;
+      cursor: pointer;
+      flex-direction: column;
+  
+      div {
+        width: 5px;
+        height: 5px;
+        background: transparent;
+        border-radius: 50%;
+        margin-bottom: 5px;
+      }//div
+  
+    a {
+        color: var(--gray-color);
+        text-decoration: none;
+        flex-direction: column;
+  
+        text-transform: uppercase;
+        font-weight: 500;
+  
+        transition: all 0.3s ease-in-out;
+  
+        &:hover {
+          color: var(--secondary-color);
         }
-    }//li
-
-    //responsive screen
-    @media screen and (min-width:900px){
-       display:none;
+      }//a
+  
+      &:hover {
+        div {
+          background: var(--secondary-color);
+        }
+      }
+    }//a
+  
+    @media screen and (max-width: 900px) {
+      display: none;
     }
-}//app__navbar-links
-
+}//app__navbar-links 
+  
 .app__navbar-menu {
     width: 35px;
     height: 35px;
     border-radius: 50%;
     position: relative;
-  
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--secondary-color);
   
-  
     svg {
       width: 70%;
       height: 70%;
       color: var(--white-color);
-    }
+    }//svg
   
     div {
       position: fixed;
@@ -93,17 +98,13 @@
       bottom: 0;
       right: 0;
       z-index: 5;
-  
       padding: 1rem;
-  
       width: 80%;
       height: 100vh;
-      
       display: flex;
       justify-content: flex-end;
       align-items: flex-end;
       flex-direction: column;
-      
       background: url('../../assets/bgWhite.png');
       background-color: var(--white-color);
       background-size: cover;
@@ -112,14 +113,14 @@
       /* top box shadow */
       box-shadow: 0px 0px 20px rgba(168, 168, 168, 0.15);
   
-      svg {
+    svg {
         width: 35px;
         height: 35px;
         color: var(--secondary-color);
         margin: 0.5rem 1rem;
-      }
+    }//svg
   
-      ul {
+    ul {
         list-style: none;
         margin: 0;
         padding: 0;
@@ -134,7 +135,7 @@
         li {
           margin: 1rem;
   
-          a {
+        a {
             color: var(--gray-color);
             text-decoration: none;
             font-size: 1rem;
@@ -147,10 +148,10 @@
               color: var(--secondary-color);
             }
           }
-        }
-      }
+        }//a
+    }//ul
   
-      @media screen and (min-width: 900px) {
+    @media screen and (min-width: 900px) {
         display: none;
       }
     }
@@ -158,8 +159,5 @@
     @media screen and (min-width: 900px) {
       display: none;
     }
-} //app__navbar-menu
-
-
-//navbar ends here
-
+}//app__navbar-menu
+  
