--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -4,6 +4,8 @@
 
 /* css variables */
 :root{
+  --font-base: "DM Sans", sans-serif;
+
   --primary-color: #edf2f8;
   --secondary-color: #313bac;
   --black-color: #030303;
