--- a/front-end/src/App.scss
+++ b/front-end/src/App.scss
@@ -17,7 +17,7 @@
     width:100%;
     min-height:100vh;
     display:flex;
-    flex-direction:row;
+    flex-direction:row; //display sections in a row
 }//app__container
 
 .app__flex{
@@ -42,7 +42,7 @@
     font-size:2.75rem;
     font-weight:500;
     text-align:center;
-    color: var(--black-color);
+    color: var(--secondary-color);
     text-transform:capitalize;
 
     @media screen and (min-width:2000px)
@@ -80,5 +80,57 @@
     @media screen and (max-width: 450px) {
         font-size: 0.9rem;
     }
-
 }//bold-text
+
+//social media icons
+.app__social{
+    display:flex;
+    justify-content: flex-end;
+    align-items:center;
+    flex-direction:column;
+    padding:1rem;
+
+    div{
+        width:50px;
+        height:50px;
+        border-radius:50%;
+        background-color: var(--white-color);
+        margin:0.25rem 0;
+        border: 1px solid var(--lightGray-color);
+
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        transition: all 0.3s ease-in-out;
+
+        //svg in div
+        svg{
+            width:25px;
+            height:25px;
+            color:var(--gray-color);
+            padding:1px;
+        }//svg
+
+        //hover for svg
+        &:hover{
+            background-color: var(--secondary-color);
+            border-color:var(--secondary-color);
+            
+            svg {
+                color: var(--white-color);
+            }
+        }//hover for svg
+
+        @media screen and (min-width: 2000px) {
+            width: 70px;
+            height: 70px;
+      
+            margin: 0.5rem 0;
+      
+            svg {
+              width: 30px;
+              height: 30px;
+            }
+        }//media
+    }//div
+}//app__social
