--- a/front-end/src/container/Vocab/Vocab.scss
+++ b/front-end/src/container/Vocab/Vocab.scss
@@ -2,6 +2,7 @@
 .app__vocab{
     flex:1;
     width:100%;
+    margin-top:8%;
     flex-direction:column;
 }//app__vocab
 
@@ -24,6 +25,10 @@
     padding:1rem;
     border-radius:5px;
     border: 1px solid var(--gray-color);
+
+    &:hover{
+        border: 1px solid var(--secondary-color);
+    }
 
     //extra large devices
     @media screen and (min-width:2000px){
