--- a/front-end/src/container/Vocab/Vocab.scss
+++ b/front-end/src/container/Vocab/Vocab.scss
@@ -6,6 +6,7 @@
     flex-direction:column;
 }//app__vocab
 
+//vocab items
 .app__vocab-items{
     display:flex;
     justify-content:center;
@@ -14,6 +15,7 @@
     margin-top:2rem;
 }//app__vocab-items
 
+//vocab item
 .app__vocab-item{
     width:200px;
     display:flex;
