--- a/front-end/src/container/Idioms/Idioms.scss
+++ b/front-end/src/container/Idioms/Idioms.scss
@@ -7,13 +7,13 @@
 }//app__idioms
 
 //idiom items
-.app__idiom-items{
+.app__idioms-items{
     display:flex;
     justify-content:center;
     align-items:flex-start;
     flex-wrap:wrap; //wraps items in the container
     margin-top:2rem;
-}//app__idiom-items
+}//app__idioms-items
 
 //idiom item
 .app__idiom-item{
