--- a/front-end/src/container/Vocab/Vocab.scss
+++ b/front-end/src/container/Vocab/Vocab.scss
@@ -55,22 +55,16 @@
 
     transition: all 0.3s ease-in-out;
 
-    input,
-    textarea {
+    input {
       width: 100%;
       padding: 0.95rem;
       border: none;
       border-radius: 7px;
-      // background-color: var(--primary-color);
       background-color: var(--white-color);
 
       font-family: var(--font-base);
       color: var(--secondary-color);
       outline: none;
-    }
-
-    textarea {
-      height: 170px;
     }
 
     &:hover {
@@ -96,7 +90,7 @@
     &:hover {
       background-color: #2430af;
     }
-  }
+  }//button
 
   @media screen and (max-width: 768px) {
     width: 100%;
