--- a/front-end/src/container/Sentences/Sentences.scss
+++ b/front-end/src/container/Sentences/Sentences.scss
@@ -28,10 +28,10 @@
     border: 1px solid var(--gray-color);
 
     svg{
-      color: var(--secondary-color);
-      width:25px;
-      height:25px;
-      padding-bottom:-5px;
+      color:#ff0000;
+      width:20px;
+      height:20px;
+      margin-bottom:-5px;
     }
 
     &:hover{
