--- a/front-end/src/container/Grammar/Grammar.scss
+++ b/front-end/src/container/Grammar/Grammar.scss
@@ -61,7 +61,7 @@
       background-color: var(--white-color);
       transition: all 0.3s ease-in-out;
   
-      input {
+      input, textarea {
         width: 100%;
         padding: 0.95rem;
         border: none;
