--- a/front-end/src/container/Grammar/Grammar.scss
+++ b/front-end/src/container/Grammar/Grammar.scss
@@ -55,7 +55,7 @@
   .app__grammar-form {
     border-radius: 5px;
     padding: 4%;
-    background-color: var(--white-color);
+    background-color: var(--primary-color);
     width: 60%;
     flex-direction: column;
     margin: 1rem 2rem;
@@ -65,15 +65,15 @@
       margin: 0.75rem 0;
       border-radius: 10px;
       cursor: pointer;
-      background-color: var(--white-color);
+      background-color: var(--primary-color);
       transition: all 0.3s ease-in-out;
   
-      input, textarea {
+      textarea, input {
         width: 100%;
         padding: 0.95rem;
         border: none;
         border-radius: 7px;
-        background-color: var(--primary-color);
+        background-color: var(--white-color);
   
         font-family: var(--font-base);
         color: var(--secondary-color);
