--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -1,106 +1,117 @@
 .app__navbar {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 2rem;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    position: fixed;
-    z-index: 2;
-
-}//app__navbar
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  position: fixed;
+  z-index: 2;
+} //app__navbar
 
 .app__navbar-logo {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  a {
+    color: var(--gray-color);
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 500;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      color: var(--secondary-color);
+    }
+  } //a
+  
+  //extra large devices
+  @media screen and (min-width: 2000px) {
+    width: 180px;
+    height: 40px;
+  }
+
+  //extra small devices
+  @media screen and (min-width: 200px) {
+    display:none;
+  } //media
+} //app__navbar-logo
+
+//nav links
+.app__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  position: relative; //
+
+  li {
+    margin: 0 1rem;
+    cursor: pointer;
+    flex-direction: column;
+
+    //to display dot on navbar-menu's top while hovering.
+    div {
+      width: 5px;
+      height: 5px;
+      background: transparent;
+      border-radius: 50%;
+      margin-bottom: 5px;
+    } //div
 
     a {
       color: var(--gray-color);
       text-decoration: none;
-      font-size: 2rem;
+      flex-direction: column;
+
+      text-transform: uppercase;
       font-weight: 500;
+
       transition: all 0.3s ease-in-out;
 
       &:hover {
         color: var(--secondary-color);
       }
-    }//a
-}//app__navbar-logo
+    } //a
 
-//nav links
-.app__navbar-links{
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    position:relative; //
-  
-    li {
-      margin: 0 1rem;
-      cursor: pointer;
-      flex-direction: column;
-      
-      //to display dot on navbar-menu's top while hovering.
-      div {
-        width: 5px;
-        height: 5px;
-        background: transparent;
-        border-radius: 50%;
-        margin-bottom: 5px;
-      }//div
-  
-      a {
-        color: var(--gray-color);
-        text-decoration: none;
-        flex-direction: column;
-  
-        text-transform: uppercase;
-        font-weight: 500;
-  
-        transition: all 0.3s ease-in-out;
-  
-        &:hover {
-          color: var(--secondary-color);
-        }
-      }//a
-  
-      &:hover {
-        ul{
-          display:block;
-          position:relative;
-          color: var(--secondary-color);
-          font-size: 80%;
-          left:0;
-          right:0;
-        }
-
-        div {
-          background: var(--secondary-color);
-        }
+    &:hover {
+      ul {
+        display: block;
+        position: relative;
+        color: var(--secondary-color);
+        font-size: 80%;
+        left: 0;
+        right: 0;
       }
-    }//a
-  
-    @media screen and (max-width: 900px) {
-      display: none;
+
+      div {
+        background: var(--secondary-color);
+      }
     }
-}//app__navbar-links
+  } //a
+
+  //not displaying navbar menu links
+  @media screen and (max-width: 900px) {
+    display: none;
+  }
+} //app__navbar-links
 
 //hide submenu navbar links
-.app__subnavbar-links{
-    position: absolute;
-    top:0;
-    padding: 0;
-    left: 100%;
-    display: none;
-}//app__subnavbar-links
+.app__subnavbar-links {
+  position: absolute;
+  top: 0;
+  padding: 0;
+  left: 100%;
+  display: none;
+} //app__subnavbar-links
 
-/* smaller font size for sub menu items */  
+/* smaller font size for sub menu items */
 .app__subnavbar-links li a {
   font-size: 80%;
 }
@@ -122,87 +133,86 @@
 
 //navigation dots menu
 .app__navbar-menu {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    position: relative;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--secondary-color);
+
+  svg {
+    width: 70%;
+    height: 70%;
+    color: var(--white-color);
+  } //svg
+
+  div {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 5;
+    padding: 1rem;
+    width: 80%;
+    height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--secondary-color);
-  
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+    background: url("../../assets/bgWhite.png");
+    background-color: var(--white-color);
+    background-size: cover;
+    background-repeat: repeat;
+
+    /* top box shadow */
+    box-shadow: 0px 0px 20px rgba(168, 168, 168, 0.15);
+
     svg {
-      width: 70%;
-      height: 70%;
-      color: var(--white-color);
-    }//svg
-  
-    div {
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      z-index: 5;
-      padding: 1rem;
-      width: 80%;
-      height: 100vh;
-      display: flex;
-      justify-content: flex-end;
-      align-items: flex-end;
-      flex-direction: column;
-      background: url('../../assets/bgWhite.png');
-      background-color: var(--white-color);
-      background-size: cover;
-      background-repeat: repeat;
-  
-      /* top box shadow */
-      box-shadow: 0px 0px 20px rgba(168, 168, 168, 0.15);
-  
-    svg {
-        width: 35px;
-        height: 35px;
-        color: var(--secondary-color);
-        margin: 0.5rem 1rem;
-    }//svg
-  
+      width: 35px;
+      height: 35px;
+      color: var(--secondary-color);
+      margin: 0.5rem 1rem;
+    } //svg
+
     ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-  
-        display: flex;
-        justify-content: flex-start;
-        align-items: flex-start;
-        flex-direction: column;
-  
-        li {
-          margin: 1rem;
-  
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+
+      li {
+        margin: 1rem;
+
         a {
-            color: var(--gray-color);
-            text-decoration: none;
-            font-size: 1rem;
-            text-transform: uppercase;
-            font-weight: 500;
-  
-            transition: all 0.3s ease-in-out;
-  
-            &:hover {
-              color: var(--secondary-color);
-            }
+          color: var(--gray-color);
+          text-decoration: none;
+          font-size: 1rem;
+          text-transform: uppercase;
+          font-weight: 500;
+
+          transition: all 0.3s ease-in-out;
+
+          &:hover {
+            color: var(--secondary-color);
           }
-        }//a
-    }//ul
-  
-    @media screen and (min-width: 900px) {
-        display: none;
-      }
-    }
-  
-    @media screen and (min-width: 900px) {
-      display: none;
-    }
-}//app__navbar-menu
-  
+        }
+      } //a
+    } //ul
+
+    // @media screen and (min-width: 900px) {
+    //   display: none;
+    // }
+  }
+
+  // @media screen and (min-width: 900px) {
+  //   display: none;
+  // }
+} //app__navbar-menu
