--- a/front-end/src/container/Vocabulary/Vocabulary.scss
+++ b/front-end/src/container/Vocabulary/Vocabulary.scss
@@ -47,7 +47,7 @@
   //extra small devices
   @media screen and (min-width: 200px) {
     width: 270px;
-    margin: 2rem;
+    margin-left: -4.3rem;
   } //media
 } //app__vocab-item
 
