--- a/front-end/src/container/Synonyms/Synonyms.scss
+++ b/front-end/src/container/Synonyms/Synonyms.scss
@@ -43,6 +43,12 @@
     width: 370px;
     margin: 2rem 4rem;
   } //media
+
+  //extra small devices
+  @media screen and (min-width: 200px) {
+    width: 270px;
+    margin-left: -4.3rem;
+  } //media
 } //app__synonym-item
 
 .app__synonym-form{
