--- a/front-end/src/container/VisualVocabulary/VisualVocabulary.scss
+++ b/front-end/src/container/VisualVocabulary/VisualVocabulary.scss
@@ -50,6 +50,12 @@
     width: 370px;
     margin: 2rem 4rem;
   } //media
+
+  //extra small devices - mobile
+  @media screen and (min-width: 200px) {
+    width: 270px;
+    margin-left: -4.3rem;
+  } //media
 } //app__visualVocab-item
 
 .app__visualVocab-form{
